# gakumas-rl

./: .gitignore  README.md  TRAINING_GUIDE.md  pyproject.toml
gakumas_rl/: __init__.py  api.py  auto_training.py  autonomous_learning.py  backends.py  bc_pretrain.py  data.py  deck_constraints.py  demo_exam.py  envs.py  exam_runtime.py  idol_config.py  inference_api.py  inference_service.py  llm_player.py  llm_reward.py  loadout.py  manual_exam_setups.py  model.py  produce_item_interpreter.py  produce_runtime.py  produce_score.py  prompt_renderer.py  reward_config.py  rllib_model.py  service.py  smoke_test.py  state_snapshot.py  support_card_selector.py  test_auto_training.py  test_autonomous_learning.py  test_demo_exam.py  test_env_randomization.py  test_inference_api.py  test_llm_player.py  test_manual_exam_setups.py  test_repository_caching.py  test_rllib_model.py  test_rules.py  test_training_stability.py  (+2 more)
gakumas_rl/prompts/: action_select.jinja2  reward_eval.jinja2  state_snapshot.jinja2  system.jinja2
scripts/: collect_exam_audit_texts.py  copy_project_assets.py  fetch_help_content_pages.py  generate_effect_coverage_matrix.py  generate_manual_loadout_catalog.py
webapp/: app.js  index.html  manual_loadout.css  manual_loadout.html  manual_loadout_app.js  manual_loadout_catalog.js  style.css
